# hassmpris

./: .env  .gitignore  Jenkinsfile  MANIFEST.in  Makefile  README.md  hassmpris.spec  mypy.ini  setup.cfg  tox.ini
src/hassmpris/proto/: mpris.proto  mpris_grpc.py  mpris_pb2.py  mpris_pb2_grpc.py
