[metadata]
name = hassmpris
version = attr: hassmpris.__version__
author = Manuel Amador (Rudd-O)
author_email = rudd-o@rudd-o.com
description = Linux desktop multimedia integration with Home Assistant
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Rudd-O/hassmpris
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)

[options]
install_requires =
    grpcio
    grpclib
    pyxdg
    pskca>=0.1.11
package_dir =
    = src
packages = find:

[options.packages.find]
where = src

[options.package_data]
hassmpris = py.typed
